fix aside title alignment

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -105,6 +105,11 @@ aside a {
     #addButtonDesktop {
         width: 80%;
     }
+    #notificationBell, #friendIcon{
+        display: inline-block;
+        text-align: left;
+        margin-left: 5%;
+    }
 }
 
 @media screen and (max-width: 768px) {
